# shine

./: .gitmodules  CMakeLists.txt  compile-desktop-debug.bat  compile-desktop.bat  compile-desktop.sh
apps/: CMakeLists.txt
apps/qtcontrols/: CMakeLists.txt  QmlApplicationViewer.cpp  keystore.cpp  keystore.h  main.cpp
apps/qtcontrols/qml/: Shine.qml
libhue/: CMakeLists.txt  configuration.h  discovery.cpp  discovery.h  huebridgeconnection.cpp  huebridgeconnection.h  light.cpp  light.h
plugin/Hue/: CMakeLists.txt
